default/objects/FS_Territory__mdt/FS_Territory__mdt.object-meta.xml
<CustomObject>
    <label>FS_Territory</label>
    <pluralLabel>FS_Territory</pluralLabel>
</CustomObject>