default/objects/FS_Territory__mdt/fields/Assigned_Users_Ids__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Users_Ids__c</fullName>
    <label>Assigned Users Ids</label>
    <length>200</length>
    <type>Text</type>
</CustomField>