default/objects/FS_Territory__mdt/fields/Number_Records_Per_Page__c.field-meta.xml
<CustomField>
    <fullName>Number_Records_Per_Page__c</fullName>
    <label>Number Records Per Page</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>