default/objects/FS_Territory__mdt/fields/RatingNew_Sections__c.field-meta.xml
<CustomField>
    <fullName>RatingNew_Sections__c</fullName>
    <label>RatingNew Sections</label>
    <length>30</length>
    <type>Text</type>
</CustomField>