default/objects/FS_Territory__mdt/fields/Scoring_sections__c.field-meta.xml
<CustomField>
    <fullName>Scoring_sections__c</fullName>
    <label>Scoring sections</label>
    <length>30</length>
    <type>Text</type>
</CustomField>